# rascasse-bq-client

./: README.md  pyproject.toml
.github/: dependabot.yml
rascasse_bq_client/: __init__.py  client.py
